app/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EACH
    MATH_OPER

Grammar

Rule 0     S' -> COMPLETE_IF_THEN2
Rule 1     COMPLETE_IF_THEN2 -> COMPLETE_IF_THEN OTHERWISE PRINT_VAL
Rule 2     COMPLETE_IF_THEN -> IF_COMPARISON THEN PRINT_VAL
Rule 3     IF_COMPARISON -> IF COMPARISON
Rule 4     IF_COMPARISON -> IF2 COMPARISON
Rule 5     COMPARISON -> COMPARISON1
Rule 6     COMPARISON -> COMPARISON2
Rule 7     COMPARISON -> COMPARISON3
Rule 8     COMPARISON -> COMPARISON31
Rule 9     COMPARISON -> COMPARISON4
Rule 10    COMPARISON -> COMPARISON41
Rule 11    COMPARISON -> COMPARISON5
Rule 12    COMPARISON -> COMPARISON51
Rule 13    COMPARISON -> COMPARISON511
Rule 14    COMPARISON -> COMPARISON52
Rule 15    COMPARISON -> COMPARISON521
Rule 16    COMPARISON -> COMPARISON6
Rule 17    COMPARISON -> COMPARISON61
Rule 18    COMPARISON -> COMPARISON7
Rule 19    COMPARISON -> COMPARISON711
Rule 20    COMPARISON -> COMPARISON712
Rule 21    COMPARISON -> COMPARISON8
Rule 22    COMPARISON -> COMPARISON81
Rule 23    COMPARISON -> COMPARISON9
Rule 24    COMPARISON -> COMPARISON91
Rule 25    COMPARISON -> COMPARISON10
Rule 26    COMPARISON -> COMPARISON101
Rule 27    COMPARISON -> COMPARISON11
Rule 28    COMPARISON3 -> COMPARISON AND COMPARISON
Rule 29    COMPARISON3 -> COMPARISON OR COMPARISON
Rule 30    COMPARISON31 -> LPAREN COMPARISON AND COMPARISON RPAREN
Rule 31    COMPARISON31 -> LPAREN COMPARISON OR COMPARISON RPAREN
Rule 32    COMPARISON1 -> THERE IS DATA FOR MEASUREMENT
Rule 33    COMPARISON11 -> THERE IS DATA FOR MEASUREMENT_GROUP
Rule 34    COMPARISON2 -> NO DATA FOR MEASUREMENT
Rule 35    COMPARISON4 -> MEASUREMENT2 COMP NUMUM
Rule 36    COMPARISON4 -> MEASUREMENT2 COMP NUMNM
Rule 37    COMPARISON4 -> MEASUREMENT2 COMP NUM
Rule 38    COMPARISON41 -> MEASUREMENT2 COMP NUMUM COMMA COMP NUMUM
Rule 39    COMPARISON41 -> MEASUREMENT2 COMP NUMNM COMMA COMP NUMUM
Rule 40    COMPARISON41 -> MEASUREMENT2 COMP NUM COMMA COMP NUMUM
Rule 41    COMPARISON41 -> MEASUREMENT2 COMP NUMUM COMMA COMP NUMNM
Rule 42    COMPARISON41 -> MEASUREMENT2 COMP NUMNM COMMA COMP NUMNM
Rule 43    COMPARISON41 -> MEASUREMENT2 COMP NUM COMMA COMP NUMNM
Rule 44    COMPARISON41 -> MEASUREMENT2 COMP NUMUM COMMA COMP NUM
Rule 45    COMPARISON41 -> MEASUREMENT2 COMP NUMNM COMMA COMP NUM
Rule 46    COMPARISON41 -> MEASUREMENT2 COMP NUM COMMA COMP NUM
Rule 47    COMPARISON711 -> FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMUM
Rule 48    COMPARISON711 -> FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMNM
Rule 49    COMPARISON711 -> FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUM
Rule 50    COMPARISON711 -> FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMUM
Rule 51    COMPARISON711 -> FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMNM
Rule 52    COMPARISON711 -> FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUM
Rule 53    COMPARISON711 -> FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMUM
Rule 54    COMPARISON711 -> FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMNM
Rule 55    COMPARISON711 -> FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUM
Rule 56    COMPARISON7 -> FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMNM
Rule 57    COMPARISON7 -> FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMUM
Rule 58    COMPARISON7 -> FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUM
Rule 59    COMPARISON712 -> FIFTY_PERCENT_POINT_FOR_ANY_TEST_OF_MEASUREMENT_GROUP COMP NUMNM
Rule 60    COMPARISON712 -> FIFTY_PERCENT_POINT_FOR_ANY_TEST_OF_MEASUREMENT_GROUP COMP NUMUM
Rule 61    COMPARISON712 -> FIFTY_PERCENT_POINT_FOR_ANY_TEST_OF_MEASUREMENT_GROUP COMP NUM
Rule 62    COMPARISON8 -> FIFTY_PERCENT_POINT_FOR_EVERY_OF_MEASUREMENT COMP NUMUM
Rule 63    COMPARISON8 -> FIFTY_PERCENT_POINT_FOR_EVERY_OF_MEASUREMENT COMP NUMNM
Rule 64    COMPARISON8 -> FIFTY_PERCENT_POINT_FOR_EVERY_OF_MEASUREMENT COMP NUM
Rule 65    COMPARISON81 -> FIFTY_PERCENT_POINT_FOR_EVERY_TEST_OF_MEASUREMENT_GROUP COMP NUMUM
Rule 66    COMPARISON81 -> FIFTY_PERCENT_POINT_FOR_EVERY_TEST_OF_MEASUREMENT_GROUP COMP NUMNM
Rule 67    COMPARISON81 -> FIFTY_PERCENT_POINT_FOR_EVERY_TEST_OF_MEASUREMENT_GROUP COMP NUM
Rule 68    COMPARISON9 -> THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN FIFTY_PERCENT_POINT IN MEASUREMENT AND FIFTY_PERCENT_POINT IN MEASUREMENT
Rule 69    COMPARISON9 -> THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN TWENTY_PERCENT_POINT IN MEASUREMENT AND TWENTY_PERCENT_POINT IN MEASUREMENT
Rule 70    COMPARISON9 -> THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN FIFTY_PERCENT_POINT IN MEASUREMENT AND TWENTY_PERCENT_POINT IN MEASUREMENT
Rule 71    COMPARISON9 -> THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN TWENTY_PERCENT_POINT IN MEASUREMENT AND FIFTY_PERCENT_POINT IN MEASUREMENT
Rule 72    COMPARISON91 -> THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN FIFTY_PERCENT_POINT IN MEASUREMENT AND FIFTY_PERCENT_POINT IN MEASUREMENT
Rule 73    COMPARISON91 -> THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN TWENTY_PERCENT_POINT IN MEASUREMENT AND TWENTY_PERCENT_POINT IN MEASUREMENT
Rule 74    COMPARISON91 -> THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN FIFTY_PERCENT_POINT IN MEASUREMENT AND TWENTY_PERCENT_POINT IN MEASUREMENT
Rule 75    COMPARISON91 -> THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN TWENTY_PERCENT_POINT IN MEASUREMENT AND FIFTY_PERCENT_POINT IN MEASUREMENT
Rule 76    COMPARISON5 -> COMPONENT IS AT LEAST NUM_FOLD LESS POWERFUL IN THE MEASUREMENT
Rule 77    COMPARISON51 -> FIFTY_PERCENT_POINT FOR MEASUREMENT IS AT LEAST NUM_FOLD LESS POWERFUL THAN FIFTY_PERCENT_POINT FOR MEASUREMENT
Rule 78    COMPARISON511 -> FIFTY_PERCENT_POINT FOR MEASUREMENT IS AT LEAST NUM_FOLD LESS POWERFUL THAN FIFTY_PERCENT_POINT FOR MEASUREMENT_GROUP
Rule 79    COMPARISON52 -> FIFTY_PERCENT_POINT FOR MEASUREMENT IS AT LEAST NUM_FOLD MORE POWERFUL THAN FIFTY_PERCENT_POINT FOR MEASUREMENT
Rule 80    COMPARISON521 -> FIFTY_PERCENT_POINT FOR MEASUREMENT IS AT LEAST NUM_FOLD MORE POWERFUL THAN FIFTY_PERCENT_POINT FOR MEASUREMENT_GROUP
Rule 81    COMPARISON6 -> NO DATA FOR ANY_OF_MEASUREMENT
Rule 82    COMPARISON61 -> NO DATA FOR EVERY_OF_MEASUREMENT
Rule 83    COMPARISON10 -> NO DATA FOR ANY_TEST_OF_MEASUREMENT_GROUP
Rule 84    COMPARISON101 -> NO DATA FOR EVERY_TEST_OF_MEASUREMENT_GROUP
Rule 85    FIFTY_PERCENT_POINT_FOR_EVERY_OF_MEASUREMENT -> FIFTY_PERCENT_POINT FOR EVERY_OF_MEASUREMENT IS
Rule 86    FIFTY_PERCENT_POINT_FOR_EVERY_OF_MEASUREMENT -> TWENTY_PERCENT_POINT FOR EVERY_OF_MEASUREMENT IS
Rule 87    FIFTY_PERCENT_POINT_FOR_EVERY_TEST_OF_MEASUREMENT_GROUP -> FIFTY_PERCENT_POINT FOR EVERY_TEST_OF_MEASUREMENT_GROUP IS
Rule 88    FIFTY_PERCENT_POINT_FOR_EVERY_TEST_OF_MEASUREMENT_GROUP -> TWENTY_PERCENT_POINT FOR EVERY_TEST_OF_MEASUREMENT_GROUP IS
Rule 89    FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT -> FIFTY_PERCENT_POINT FOR ANY_OF_MEASUREMENT IS
Rule 90    FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT -> TWENTY_PERCENT_POINT FOR ANY_OF_MEASUREMENT IS
Rule 91    FIFTY_PERCENT_POINT_FOR_ANY_TEST_OF_MEASUREMENT_GROUP -> FIFTY_PERCENT_POINT FOR ANY_TEST_OF_MEASUREMENT_GROUP IS
Rule 92    FIFTY_PERCENT_POINT_FOR_ANY_TEST_OF_MEASUREMENT_GROUP -> TWENTY_PERCENT_POINT FOR ANY_TEST_OF_MEASUREMENT_GROUP IS
Rule 93    MEASUREMENT2 -> FIFTY_PERCENT_POINT FOR MEASUREMENT IS
Rule 94    MEASUREMENT2 -> TWENTY_PERCENT_POINT FOR MEASUREMENT IS
Rule 95    ANY_OF_MEASUREMENT -> ANY OF MEASUREMENT
Rule 96    ANY_TEST_OF_MEASUREMENT_GROUP -> ANY TEST OF MEASUREMENT_GROUP
Rule 97    EVERY_OF_MEASUREMENT -> EVERY OF MEASUREMENT
Rule 98    EVERY_TEST_OF_MEASUREMENT_GROUP -> EVERY TEST OF MEASUREMENT_GROUP
Rule 99    MEASUREMENT -> ID TEST
Rule 100   MEASUREMENT -> ID CRITICAL_BREAKDOWN
Rule 101   MEASUREMENT_GROUP -> ID TESTGROUP
Rule 102   IF2 -> COMPLETE_IF_THEN OTHERWISE IF

Terminals, with rules where they appear

AND                  : 28 30 68 69 70 71 72 73 74 75
ANY                  : 95 96
AT                   : 76 77 78 79 80
BETWEEN              : 68 69 70 71 72 73 74 75
COMMA                : 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
COMP                 : 35 36 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 57 58 59 60 61 62 63 64 65 66 67
COMPONENT            : 76
CRITICAL_BREAKDOWN   : 100
DATA                 : 32 33 34 81 82 83 84
DIFFERENCE           : 68 69 70 71 72 73 74 75
EACH                 : 
EVERY                : 97 98
FIFTY_PERCENT_POINT  : 68 68 70 71 72 72 74 75 77 77 78 78 79 79 80 80 85 87 89 91 93
FOLD                 : 68 69 70 71 72 73 74 75
FOR                  : 32 33 34 77 77 78 78 79 79 80 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94
ID                   : 99 100 101
IF                   : 3 102
IN                   : 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76
IS                   : 32 33 68 69 70 71 72 73 74 75 76 77 78 79 80 85 86 87 88 89 90 91 92 93 94
LEAST                : 76 77 78 79 80
LESS                 : 68 69 70 71 76 77 78
LPAREN               : 30 31
MATH_OPER            : 
MORE                 : 72 73 74 75 79 80
NO                   : 34 81 82 83 84
NUM                  : 37 40 43 44 45 46 46 49 50 51 52 52 55 58 61 64 67 68 69 70 71 72 73 74 75
NUMNM                : 36 39 41 42 42 43 45 47 48 48 49 51 54 56 59 63 66
NUMUM                : 35 38 38 39 40 41 44 47 50 53 53 54 55 57 60 62 65
NUM_FOLD             : 76 77 78 79 80
OF                   : 95 96 97 98
OR                   : 29 31
OTHERWISE            : 1 102
POWERFUL             : 76 77 78 79 80
PRINT_VAL            : 1 2
RPAREN               : 30 31
TEST                 : 96 98 99
TESTGROUP            : 101
THAN                 : 68 69 70 71 72 73 74 75 77 78 79 80
THE                  : 76
THEN                 : 2
THERE                : 32 33 68 69 70 71 72 73 74 75
TWENTY_PERCENT_POINT : 69 69 70 71 73 73 74 75 86 88 90 92 94
error                : 

Nonterminals, with rules where they appear

ANY_OF_MEASUREMENT   : 81 89 90
ANY_TEST_OF_MEASUREMENT_GROUP : 83 91 92
COMPARISON           : 3 4 28 28 29 29 30 30 31 31
COMPARISON1          : 5
COMPARISON10         : 25
COMPARISON101        : 26
COMPARISON11         : 27
COMPARISON2          : 6
COMPARISON3          : 7
COMPARISON31         : 8
COMPARISON4          : 9
COMPARISON41         : 10
COMPARISON5          : 11
COMPARISON51         : 12
COMPARISON511        : 13
COMPARISON52         : 14
COMPARISON521        : 15
COMPARISON6          : 16
COMPARISON61         : 17
COMPARISON7          : 18
COMPARISON711        : 19
COMPARISON712        : 20
COMPARISON8          : 21
COMPARISON81         : 22
COMPARISON9          : 23
COMPARISON91         : 24
COMPLETE_IF_THEN     : 1 102
COMPLETE_IF_THEN2    : 0
EVERY_OF_MEASUREMENT : 82 85 86
EVERY_TEST_OF_MEASUREMENT_GROUP : 84 87 88
FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT : 47 48 49 50 51 52 53 54 55 56 57 58
FIFTY_PERCENT_POINT_FOR_ANY_TEST_OF_MEASUREMENT_GROUP : 59 60 61
FIFTY_PERCENT_POINT_FOR_EVERY_OF_MEASUREMENT : 62 63 64
FIFTY_PERCENT_POINT_FOR_EVERY_TEST_OF_MEASUREMENT_GROUP : 65 66 67
IF2                  : 4
IF_COMPARISON        : 2
MEASUREMENT          : 32 34 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 77 77 78 79 79 80 93 94 95 97
MEASUREMENT2         : 35 36 37 38 39 40 41 42 43 44 45 46
MEASUREMENT_GROUP    : 33 78 80 96 98

Parsing method: LALR

state 0

    (0) S' -> . COMPLETE_IF_THEN2
    (1) COMPLETE_IF_THEN2 -> . COMPLETE_IF_THEN OTHERWISE PRINT_VAL
    (2) COMPLETE_IF_THEN -> . IF_COMPARISON THEN PRINT_VAL
    (3) IF_COMPARISON -> . IF COMPARISON
    (4) IF_COMPARISON -> . IF2 COMPARISON
    (102) IF2 -> . COMPLETE_IF_THEN OTHERWISE IF

    IF              shift and go to state 4

    COMPLETE_IF_THEN2              shift and go to state 1
    COMPLETE_IF_THEN               shift and go to state 2
    IF_COMPARISON                  shift and go to state 3
    IF2                            shift and go to state 5

state 1

    (0) S' -> COMPLETE_IF_THEN2 .



state 2

    (1) COMPLETE_IF_THEN2 -> COMPLETE_IF_THEN . OTHERWISE PRINT_VAL
    (102) IF2 -> COMPLETE_IF_THEN . OTHERWISE IF

    OTHERWISE       shift and go to state 6


state 3

    (2) COMPLETE_IF_THEN -> IF_COMPARISON . THEN PRINT_VAL

    THEN            shift and go to state 7


state 4

    (3) IF_COMPARISON -> IF . COMPARISON
    (5) COMPARISON -> . COMPARISON1
    (6) COMPARISON -> . COMPARISON2
    (7) COMPARISON -> . COMPARISON3
    (8) COMPARISON -> . COMPARISON31
    (9) COMPARISON -> . COMPARISON4
    (10) COMPARISON -> . COMPARISON41
    (11) COMPARISON -> . COMPARISON5
    (12) COMPARISON -> . COMPARISON51
    (13) COMPARISON -> . COMPARISON511
    (14) COMPARISON -> . COMPARISON52
    (15) COMPARISON -> . COMPARISON521
    (16) COMPARISON -> . COMPARISON6
    (17) COMPARISON -> . COMPARISON61
    (18) COMPARISON -> . COMPARISON7
    (19) COMPARISON -> . COMPARISON711
    (20) COMPARISON -> . COMPARISON712
    (21) COMPARISON -> . COMPARISON8
    (22) COMPARISON -> . COMPARISON81
    (23) COMPARISON -> . COMPARISON9
    (24) COMPARISON -> . COMPARISON91
    (25) COMPARISON -> . COMPARISON10
    (26) COMPARISON -> . COMPARISON101
    (27) COMPARISON -> . COMPARISON11
    (32) COMPARISON1 -> . THERE IS DATA FOR MEASUREMENT
    (34) COMPARISON2 -> . NO DATA FOR MEASUREMENT
    (28) COMPARISON3 -> . COMPARISON AND COMPARISON
    (29) COMPARISON3 -> . COMPARISON OR COMPARISON
    (30) COMPARISON31 -> . LPAREN COMPARISON AND COMPARISON RPAREN
    (31) COMPARISON31 -> . LPAREN COMPARISON OR COMPARISON RPAREN
    (35) COMPARISON4 -> . MEASUREMENT2 COMP NUMUM
    (36) COMPARISON4 -> . MEASUREMENT2 COMP NUMNM
    (37) COMPARISON4 -> . MEASUREMENT2 COMP NUM
    (38) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUMUM
    (39) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUMUM
    (40) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUMUM
    (41) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUMNM
    (42) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUMNM
    (43) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUMNM
    (44) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUM
    (45) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUM
    (46) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUM
    (76) COMPARISON5 -> . COMPONENT IS AT LEAST NUM_FOLD LESS POWERFUL IN THE MEASUREMENT
    (77) COMPARISON51 -> . FIFTY_PERCENT_POINT FOR MEASUREMENT IS AT LEAST NUM_FOLD LESS POWERFUL THAN FIFTY_PERCENT_POINT FOR MEASUREMENT
    (78) COMPARISON511 -> . FIFTY_PERCENT_POINT FOR MEASUREMENT IS AT LEAST NUM_FOLD LESS POWERFUL THAN FIFTY_PERCENT_POINT FOR MEASUREMENT_GROUP
    (79) COMPARISON52 -> . FIFTY_PERCENT_POINT FOR MEASUREMENT IS AT LEAST NUM_FOLD MORE POWERFUL THAN FIFTY_PERCENT_POINT FOR MEASUREMENT
    (80) COMPARISON521 -> . FIFTY_PERCENT_POINT FOR MEASUREMENT IS AT LEAST NUM_FOLD MORE POWERFUL THAN FIFTY_PERCENT_POINT FOR MEASUREMENT_GROUP
    (81) COMPARISON6 -> . NO DATA FOR ANY_OF_MEASUREMENT
    (82) COMPARISON61 -> . NO DATA FOR EVERY_OF_MEASUREMENT
    (56) COMPARISON7 -> . FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMNM
    (57) COMPARISON7 -> . FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMUM
    (58) COMPARISON7 -> . FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUM
    (47) COMPARISON711 -> . FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMUM
    (48) COMPARISON711 -> . FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMNM
    (49) COMPARISON711 -> . FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUM
    (50) COMPARISON711 -> . FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMUM
    (51) COMPARISON711 -> . FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMNM
    (52) COMPARISON711 -> . FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUM
    (53) COMPARISON711 -> . FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMUM
    (54) COMPARISON711 -> . FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMNM
    (55) COMPARISON711 -> . FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUM
    (59) COMPARISON712 -> . FIFTY_PERCENT_POINT_FOR_ANY_TEST_OF_MEASUREMENT_GROUP COMP NUMNM
    (60) COMPARISON712 -> . FIFTY_PERCENT_POINT_FOR_ANY_TEST_OF_MEASUREMENT_GROUP COMP NUMUM
    (61) COMPARISON712 -> . FIFTY_PERCENT_POINT_FOR_ANY_TEST_OF_MEASUREMENT_GROUP COMP NUM
    (62) COMPARISON8 -> . FIFTY_PERCENT_POINT_FOR_EVERY_OF_MEASUREMENT COMP NUMUM
    (63) COMPARISON8 -> . FIFTY_PERCENT_POINT_FOR_EVERY_OF_MEASUREMENT COMP NUMNM
    (64) COMPARISON8 -> . FIFTY_PERCENT_POINT_FOR_EVERY_OF_MEASUREMENT COMP NUM
    (65) COMPARISON81 -> . FIFTY_PERCENT_POINT_FOR_EVERY_TEST_OF_MEASUREMENT_GROUP COMP NUMUM
    (66) COMPARISON81 -> . FIFTY_PERCENT_POINT_FOR_EVERY_TEST_OF_MEASUREMENT_GROUP COMP NUMNM
    (67) COMPARISON81 -> . FIFTY_PERCENT_POINT_FOR_EVERY_TEST_OF_MEASUREMENT_GROUP COMP NUM
    (68) COMPARISON9 -> . THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN FIFTY_PERCENT_POINT IN MEASUREMENT AND FIFTY_PERCENT_POINT IN MEASUREMENT
    (69) COMPARISON9 -> . THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN TWENTY_PERCENT_POINT IN MEASUREMENT AND TWENTY_PERCENT_POINT IN MEASUREMENT
    (70) COMPARISON9 -> . THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN FIFTY_PERCENT_POINT IN MEASUREMENT AND TWENTY_PERCENT_POINT IN MEASUREMENT
    (71) COMPARISON9 -> . THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN TWENTY_PERCENT_POINT IN MEASUREMENT AND FIFTY_PERCENT_POINT IN MEASUREMENT
    (72) COMPARISON91 -> . THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN FIFTY_PERCENT_POINT IN MEASUREMENT AND FIFTY_PERCENT_POINT IN MEASUREMENT
    (73) COMPARISON91 -> . THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN TWENTY_PERCENT_POINT IN MEASUREMENT AND TWENTY_PERCENT_POINT IN MEASUREMENT
    (74) COMPARISON91 -> . THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN FIFTY_PERCENT_POINT IN MEASUREMENT AND TWENTY_PERCENT_POINT IN MEASUREMENT
    (75) COMPARISON91 -> . THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN TWENTY_PERCENT_POINT IN MEASUREMENT AND FIFTY_PERCENT_POINT IN MEASUREMENT
    (83) COMPARISON10 -> . NO DATA FOR ANY_TEST_OF_MEASUREMENT_GROUP
    (84) COMPARISON101 -> . NO DATA FOR EVERY_TEST_OF_MEASUREMENT_GROUP
    (33) COMPARISON11 -> . THERE IS DATA FOR MEASUREMENT_GROUP
    (93) MEASUREMENT2 -> . FIFTY_PERCENT_POINT FOR MEASUREMENT IS
    (94) MEASUREMENT2 -> . TWENTY_PERCENT_POINT FOR MEASUREMENT IS
    (89) FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT -> . FIFTY_PERCENT_POINT FOR ANY_OF_MEASUREMENT IS
    (90) FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT -> . TWENTY_PERCENT_POINT FOR ANY_OF_MEASUREMENT IS
    (91) FIFTY_PERCENT_POINT_FOR_ANY_TEST_OF_MEASUREMENT_GROUP -> . FIFTY_PERCENT_POINT FOR ANY_TEST_OF_MEASUREMENT_GROUP IS
    (92) FIFTY_PERCENT_POINT_FOR_ANY_TEST_OF_MEASUREMENT_GROUP -> . TWENTY_PERCENT_POINT FOR ANY_TEST_OF_MEASUREMENT_GROUP IS
    (85) FIFTY_PERCENT_POINT_FOR_EVERY_OF_MEASUREMENT -> . FIFTY_PERCENT_POINT FOR EVERY_OF_MEASUREMENT IS
    (86) FIFTY_PERCENT_POINT_FOR_EVERY_OF_MEASUREMENT -> . TWENTY_PERCENT_POINT FOR EVERY_OF_MEASUREMENT IS
    (87) FIFTY_PERCENT_POINT_FOR_EVERY_TEST_OF_MEASUREMENT_GROUP -> . FIFTY_PERCENT_POINT FOR EVERY_TEST_OF_MEASUREMENT_GROUP IS
    (88) FIFTY_PERCENT_POINT_FOR_EVERY_TEST_OF_MEASUREMENT_GROUP -> . TWENTY_PERCENT_POINT FOR EVERY_TEST_OF_MEASUREMENT_GROUP IS

    THERE           shift and go to state 32
    NO              shift and go to state 33
    LPAREN          shift and go to state 34
    COMPONENT       shift and go to state 36
    FIFTY_PERCENT_POINT shift and go to state 37
    TWENTY_PERCENT_POINT shift and go to state 42

    COMPARISON                     shift and go to state 8
    COMPARISON1                    shift and go to state 9
    COMPARISON2                    shift and go to state 10
    COMPARISON3                    shift and go to state 11
    COMPARISON31                   shift and go to state 12
    COMPARISON4                    shift and go to state 13
    COMPARISON41                   shift and go to state 14
    COMPARISON5                    shift and go to state 15
    COMPARISON51                   shift and go to state 16
    COMPARISON511                  shift and go to state 17
    COMPARISON52                   shift and go to state 18
    COMPARISON521                  shift and go to state 19
    COMPARISON6                    shift and go to state 20
    COMPARISON61                   shift and go to state 21
    COMPARISON7                    shift and go to state 22
    COMPARISON711                  shift and go to state 23
    COMPARISON712                  shift and go to state 24
    COMPARISON8                    shift and go to state 25
    COMPARISON81                   shift and go to state 26
    COMPARISON9                    shift and go to state 27
    COMPARISON91                   shift and go to state 28
    COMPARISON10                   shift and go to state 29
    COMPARISON101                  shift and go to state 30
    COMPARISON11                   shift and go to state 31
    MEASUREMENT2                   shift and go to state 35
    FIFTY_PERCENT_POINT_FOR_ANY_OF_MEASUREMENT shift and go to state 38
    FIFTY_PERCENT_POINT_FOR_ANY_TEST_OF_MEASUREMENT_GROUP shift and go to state 39
    FIFTY_PERCENT_POINT_FOR_EVERY_OF_MEASUREMENT shift and go to state 40
    FIFTY_PERCENT_POINT_FOR_EVERY_TEST_OF_MEASUREMENT_GROUP shift and go to state 41

state 5
